--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ ext {
 dependencies {
     implementation platform('io.projectreactor:reactor-bom:2020.0.0-SNAPSHOT')
 
+    implementation 'io.projectreactor.netty:reactor-netty-core:1.0.0-SNAPSHOT'
+    implementation 'io.projectreactor.netty:reactor-netty-http:1.0.0-SNAPSHOT'
     implementation 'io.projectreactor.netty:reactor-netty-http-brave:1.0.0-SNAPSHOT'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
